--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -22,7 +22,7 @@ jobs:
         run: cargo binstall -y dioxus-cli@0.6.1 --locked --force
       - uses: actions/checkout@v2
       - name: Build
-        run:  dx bundle --release --platform web
+        run:  dx build --release --platform web
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
